--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -5,8 +5,7 @@
 <h2>We're here to help! Please sign up to use our free service.</h2>
 <br>
 
-
-<form class="" action="index.html" method="post">
+<form class="" action="/users/login" method="post">
   <label for="username">Username: </label>
   <input type="text" name="username" id="username" placeholder="pick a username">
 
