moved projects tests to spec/cotrollers/projects_controller_spec.rb

--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -6,12 +6,11 @@
 <br>
 
 <form class="" action="/users/login" method="post">
-  <label for="username">Username: </label>
-  <input type="text" name="username" id="username" placeholder="pick a username">
+  <label for="username">Name: </label>
+  <input type="text" name="name" id="name" placeholder="your name">
 
-  <label for="email">Email: </label>
+  <label for="email">Username: </label>
   <input type="email" name="email" id="email" placeholder="your email">
-
 
   <label for="password">Password: </label>
   <input type="password" name="password" id="password" placeholder="create a password">
