--- a/app/views/users/welcome.erb
+++ b/app/views/users/welcome.erb
@@ -6,7 +6,7 @@
 
   <h1>Welcome to your project Supply Tracker!</h1>
 
-  <a href="/signup"><input type="submit" value="Sign Up"></a>
+  <a href="/users/signup"><input type="submit" value="Sign Up"></a>
 
 
 </div>
