added login routes & methods, added create_project form

--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -5,8 +5,8 @@
 <h2>We're here to help! Please sign up to use our free service.</h2>
 <br>
 
-<form class="" action="/users/login" method="post">
-  <label for="username">Name: </label>
+<form class="" action="/users/signup" method="post">
+  <label for="name">Name: </label>
   <input type="text" name="name" id="name" placeholder="your name">
 
   <label for="email">Username: </label>
