--- a/app/views/users/welcome.erb
+++ b/app/views/users/welcome.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <header><img src="images/organized.jpg"</header>
+  <header><img src="organized.jpg"</header>
 
     <h3>hello busy people ... :)</h3>
 
