got seeds file working

--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -5,4 +5,6 @@
   <input type="text" name="email" placeholder="your email">
   <input type="password" name="password" placeholder="password">
 
+  <input type="submit" value="Log In">
+
 </form>
