--- a/app/views/users/dashboard.erb
+++ b/app/views/users/dashboard.erb
@@ -1,1 +1,7 @@
-<h1>Welcome to <%=@user.name%>'s Dashboard</h1>
+<!-- can't get hello @username to work within erb tags -->
+<h2>Welcome to your dashboard</h2>
+
+
+<% Project.all.each do |project| %>
+  <li> <a href="projects/<%=project.id%>"><%project.name %></a>
+<% end %>
