--- a/app/views/users/dashboard.erb
+++ b/app/views/users/dashboard.erb
@@ -1,7 +1,17 @@
 <!-- can't get hello @username to work within erb tags -->
 <h2>Welcome to your dashboard</h2>
 
+<h3>My Projects</h3>
 
-<% Project.all.each do |project| %>
-  <li> <a href="projects/<%=project.id%>"><%project.name %></a>
-<% end %>
+  <% if @projects %>
+    <% @projects.sort.each do |project| %>
+      <li> <a href="projects/<%= project.id %>"><%= project.name %></a>
+    <% end %>
+  <% else %>
+      <br>
+      <br>
+      <h3> Let's get started! Click the button to create a new project.</h3>
+      <br>
+  <% end %>
+
+<a href="/projects/new"><input type="submit" value="Create New Project"></a>
