--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -7,13 +7,13 @@
 
 <form class="" action="/users/signup" method="post">
   <label for="name">Name: </label>
-  <input type="text" name="name" id="name" placeholder="your name">
+  <input type="text" name="name" id="name" placeholder="your name" required>
 
   <label for="email">Username: </label>
-  <input type="email" name="email" id="email" placeholder="your email">
+  <input type="email" name="email" id="email" placeholder="your email" required>
 
   <label for="password">Password: </label>
-  <input type="password" name="password" id="password" placeholder="create a password">
+  <input type="password" name="password" id="password" placeholder="create a password" required>
 
 
   <input type="submit" id="sign me up" value="Sign Me Up!">
