--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,9 +1,9 @@
 <h2>Please log in</h2>
 
-<form action="users/login" method="post">
+<form action="/users/login" method="post">
 
-  <input type="text" name="email" placeholder="your email">
-  <input type="password" name="password" placeholder="password">
+  <input type="text" placeholder="your email" name="email" required>
+  <input type="password" name="password" placeholder="password" required>
 
   <input type="submit" value="Log In">
 
