--- a/app/views/projects/new.erb
+++ b/app/views/projects/new.erb
@@ -1,5 +1,5 @@
 Create a new project
-<form action="/projects/new" method="post">
+<form action="/projects" method="post">
 
   <label for="name">Name:  </label>
   <input type="text" name="name" placeholder="project name" required>
@@ -23,5 +23,8 @@ Create a new project
   <br>
 
   <input type="submit" placeholder="create_project">
+  <br>
+  <br>
+  
 
 </form>
