--- a/app/views/projects/show.erb
+++ b/app/views/projects/show.erb
@@ -1,3 +1,5 @@
+
+
 <h1><%= @project.name %></h1>
 <h3>Type: </h3>
 <h4><%= @project.project_type %></h4>
@@ -12,4 +14,13 @@
 <h4><%= @project.date %></h4>
 <br>
 
-<a href="/projects/edit"><input type="submit" value="Edit"></a>
+<a href="/projects/<%= @project.id %>/edit"><input type="submit" value="Edit"></a>
+
+<br>
+<br>
+<a href="/projects/<%= @project.id %>/delete"><input type="submit" value="Delete Project"></a>
+<br>
+<br>
+
+
+<a href="/users/logout"><input type="submit" value="Log Out"></a>
