--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -6,5 +6,10 @@
   <input type="password" name="password" placeholder="password" required>
 
   <input type="submit" value="Log In">
+  <br>
+  <br>
+  <br>
+
+  <a href="users/signup">Don't have an account? You can create a free account here.</a>
 
 </form>
