updated tables and seed file to include user_id for projects and ProjectSupplies table

--- a/app/views/users/welcome.erb
+++ b/app/views/users/welcome.erb
@@ -6,7 +6,11 @@
 
   <h1>Welcome to your project Supply Tracker!</h1>
 
+  <h3>Please log in.</h3>
+  <a href="/users/login"><input type="submit" value="Login"></a>
 
+
+  <h3>or, start a free accout</h3>
   <a href="/users/signup"><input type="submit" value="Sign Up"></a>
 
 
