added supplies controller, need to create supplies views

--- a/app/views/projects/show.erb
+++ b/app/views/projects/show.erb
@@ -21,7 +21,7 @@
 <a href="/projects/<%= @project.id %>/delete"><input type="submit" value="Delete Project"></a>
 <br>
 <br>
-<a href="/projects/<%= @user.id %>/dashboard"><input type="submit" value="Back to my dashboard"></a>
+<a href="/users/dashboard"><input type="submit" value="Back to my dashboard"></a>
 
 
 <a href="/users/logout"><input type="submit" value="Log Out"></a>
