--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,15 +1,25 @@
-<h2>Please log in</h2>
+<div class="container">
+  <header><img src="organized.jpg"</header>
 
-<form action="/users/login" method="post">
+    <h3>hello busy people ... :)</h3>
 
-  <input type="text" placeholder="your email" name="email" required>
-  <input type="password" name="password" placeholder="password" required>
 
-  <input type="submit" value="Log In">
-  <br>
-  <br>
-  <br>
+  <h1>Welcome to your project Supply Tracker!</h1>
 
-  <a href="users/signup">Don't have an account? You can create a free account here.</a>
+<br>
+<br>
+  <h2>Please log in</h2>
 
-</form>
+  <form action="/users/login" method="post">
+
+    <input type="text" placeholder="your email" name="email" required>
+    <input type="password" name="password" placeholder="password" required>
+
+    <input type="submit" value="Log In">
+    <br>
+    <br>
+    <br>
+
+    <a href="users/signup">Don't have an account? You can create a free account here.</a>
+
+  </form>
