--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -20,6 +20,6 @@
     <br>
     <br>
 
-    <a href="users/signup">Don't have an account? You can create a free account here.</a>
+    <a href="users/signup">Don't have an account? You can create a free one here.</a>
 
   </form>
