--- a/app/views/projects/edit.erb
+++ b/app/views/projects/edit.erb
@@ -1,29 +1,34 @@
-<h2>Edit your project</h2>
+<h2>Edit your project.</h2>
+<p> Fill in the fields you'd like to update.</p>
+
 <form action="/projects/<%=@project.id%>" method="post">
   <input id="hidden" type="hidden" name="_method" value="patch">
     <h1><%= @project.name %></h1>
     <input type="text" name="name" placeholder="update name">
 
-    <h3>Type: </h3>
+    <h3><label for="Type"></label>Type:</h3>
     <h4><%= @project.project_type %></h4>
     <input type="text" name="project_type" placeholder="update_project_type">
     <br>
-    <h3>Date: </h3>
+
+    <h3><label for="Date"></label>Date:</h3>
     <h4><%= @project.date %></h4>
     <input type="date" name="date" placeholder="new_date">
     <br>
-    <h3>Attendees: </h3>
+
+    <h3><label for="Attendees"></label>Attendees:</h3>
     <h4><%= @project.attendees %></h4>
     <input type="integer" name="attendees" placeholder="update number of attendees">
     <br>
-    <h3>Supplies Budget:  </h3>
+
+    <h3><label for="Supplies Budget"></label>Supplies Budget:</h3>
     <input type="integer" name="supplies_budget" placeholder="update supplies budget">
     <h4><%= @project.date %></h4>
     <br>
-    <input type="submit" placeholder="Update Project">
 
+    <input type="submit" placeholder="Update Project">
   <br>
   <br>
   <br>
-  <a href="/users/logout"><input type="submit" value="Log Out"></a>
+    <a href="/users/logout"><input type="submit" value="Log Out"></a>
 </form>
