--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,10 +1,13 @@
 <div class="container">
-  <header><img src="organized.jpg"</header>
+  <header></header>
+
 
     <h3>hello busy people ... :)</h3>
 
 
+
   <h1>Welcome to your project Supply Tracker!</h1>
+
 
 <br>
 <br>
