--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -13,11 +13,12 @@
 
   /* --- Welcome Page Styles --- */
   body {
-    background-color: lightblue;
+    background-color: lightyellow;
     color: #333;
     font-family: Sans-Serif;
     line-height: 18px;
   }
+
 
   .wrapper {
     background: #fff;
@@ -112,4 +113,5 @@
     font-size: 18px;
     line-height: 24px;
   }
+
 }
