can now find or create supplies from text field even if only one supply entered (ie w/o each)

--- a/app/views/supplies/assign.erb
+++ b/app/views/supplies/assign.erb
@@ -35,10 +35,10 @@
 <input type="string"  name="[supply1][name]">
 <br>
 <br>
-<input type="string" name="supply2[name]">
+<input type="string" name="[supply2][name]">
 <br>
 <br>
-<input type="string" name="supply3[name]">
+<input type="string" name="[supply3][name]">
 <br>
 <br>
 
