--- a/app/views/supplies/assign.erb
+++ b/app/views/supplies/assign.erb
@@ -1,32 +1,68 @@
-<h1><%= @project.name %></h1>
+<!DOCTYPE html>
+<html>
+<head>
+<style>
 
-<form action="/supplies/assign/:id" method="post">
+#navbar {
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+#navbar th {
+  padding-top: 24px;
+  padding-bottom: 24px;
+  text-align: center;
+  background-color: #469ad6;
+  color: white;
+}
+
+
+</style>
+</head>
+<table id="navbar">
+  <tr>
+    <th><h2>Project Supplies</h2><th>
+    <th><a href="users/dashboard/<%= @user.id %>">Dashboard</a></th>
+    <th><a href="href="/users/logout">Log Out</a></th>
+  </tr>
+  </table>
+
+<br>
+<br>
+<br>
+
+<h1><%= @project.name.capitalize %></h1>
 
 
 
-<p>Supplies already assigned to this project:</p>
-<% cps = @current_project_supplies %>
-<% if cps.size > 1 %>
-  <% cps.each do |supply| %>
-    <input type="checkbox" id="<%= supply.name %>" name="user[project_ids][][supplies]" value="<%= supply.name %>" checked>  <%= supply.name %><br>
+
+
+
+<p>Supplies already assigned to this project (fix so you can uncheck to remove):</p>
+<% if @current %>
+  <% if @current.size > 1 %>
+    <% @current.each do |supply| %>
+      <% supply.delete if !supply.name %>
+      <input type="checkbox" id="<%= supply.name %>" name="user[project_ids][][supplies]" value="<%= supply.name %>" checked>  <%= supply.name %><br>
+    <% end %>
+  <% elsif @current.size == 1 %>
+      <% only = @current.first %>
+      <input type="checkbox" id="<%= only.name %>" name="user[project_ids][][supplies]" value="<%= only.name %>" checked>  <%= only.name %><br>
   <% end %>
-<% elsif cps.size == 1 %>
-    <% only = cps.first %>
-    <input type="checkbox" id="<%= only.name %>" name="user[project_ids][][supplies]" value="<%= only.name %>" checked>  <%= only.name %><br>
 <% end %>
 
 
 <br>
 <br>
 <p>Would you like to add any of these supplies from your other projects?</p>
-<% if @other_supplies %>
-  <% os = @other_supplies %>
-  <% if os.size > 1 %>
-    <% os.each do |supply| %>
+<% if @other %>
+  <% if @other.size > 1 %>
+    <% @other.each do |supply| %>
       <input type="checkbox" id="<%= supply.name %>" name="user[project_ids][][supplies]" value="<%= supply.name %>">  <%= supply.name %><br>
     <% end %>
-  <% elsif os.size == 1 %>
-    <% only = os.first %>
+  <% elsif @other.size == 1 %>
+    <% only = @other.first %>
     <input type="checkbox" id="<%= only.name %>" name="user[project_ids][][supplies]" value="<%= only.name %>" checked>  <%= only.name %><br>
   <% end %>
 <% end %>
@@ -35,20 +71,21 @@
 <br>
 
 <h5> or create some new supplies:</h5>
-<input type="hidden" name="project_name" value="<%= @project.name %>">
-<input type="string"  name="[supply1][name]">
-<br>
-<br>
-<input type="string" name="[supply2][name]">
-<br>
-<br>
-<input type="string" name="[supply3][name]">
-<br>
-<br>
+<form action="/supplies/assign/:id" method="post">
 
-<input type="submit" value="assign">
+  <input type="hidden" name="name" value="<%= @project.name %>">
+  <input type="string"  name="[supply][1][name]">
+  <br>
+  <br>
+  <input type="string" name="[supply[2][name]">
+  <br>
+  <br>
+  <input type="string" name="[supply[3][name]">
+  <br>
+  <br>
+
+  <input type="submit" value="update">
 
 </form>
 <br>
 <br>
-<a href="/users/dashboard/<%= @user.id %>">Click here to return to your dashboard</a>
