assign page - adding new supplies by text now works; will no longer create supplies w/o name"

--- a/app/views/supplies/assign.erb
+++ b/app/views/supplies/assign.erb
@@ -23,7 +23,7 @@
 <table id="navbar">
   <tr>
     <th><h2>Project Supplies</h2><th>
-    <th><a href="href="/users/logout">Log Out</a></th>
+    <th><a href="/users/logout">Log Out</a></th>
   </tr>
   </table>
 
