--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -13,6 +13,7 @@
 
   /* --- Welcome Page Styles --- */
   body {
+    background-image: url("/images/brooke-lark-158019-unsplash.jpg");
     background-color: lightyellow;
     color: #333;
     font-family: Sans-Serif;
