all user's supplies now showing on dashboard

--- a/app/views/supplies/assign.erb
+++ b/app/views/supplies/assign.erb
@@ -23,6 +23,7 @@
 <table id="navbar">
   <tr>
     <th><h2>Project Supplies</h2><th>
+    <th><a href="/users/dashboard/<%= @user.id %>">Dashboard</a></th>
     <th><a href="/users/logout">Log Out</a></th>
   </tr>
   </table>
@@ -78,6 +79,7 @@
   <br>
   <br>
 
+  <p>Click the button below to update this project's supplies. Then reload your page to see the changes.</p>
   <input type="submit" value="update">
 
 </form>
