--- a/app/views/users/dashboard.erb
+++ b/app/views/users/dashboard.erb
@@ -53,11 +53,12 @@
 
 <h1>My Projects</h1>
 <br>
-  <% if @projects %>
+  <%if @projects %>
     <% if @projects.size == 1 %>
     <ul>
       <li><a href="/projects/<%= @projects.first.id %>"><%= @projects.first.name.capitalize %></a></li>
     </ul>
+    <% binding.pry %>
     <% elsif @projects.size > 1 %>
       <% @projects.each do |project| %>
       <ul>
@@ -65,17 +66,41 @@
       </ul>
       <% end %>
     <% end %>
-  <% else %>
-    <br>
-    <br>
-    <h3> Let's get started! Click the button to create a new project.</h3>
-    <br>
   <% end %>
-  <br>
-  <br>
+  <!-- todo: render flash message if no projects-->
 
+  <br>
+  <br>
   <a href="/projects/new"><input type="submit" value="Create New Project"></a>
   <br>
   <br>
   <br>
   </body>
+
+  <h1>My Supplies</h1>
+  <br>
+
+  <% user = @user %>
+  <% @all =  Helpers.all_supplies(user) %>
+  <% if @all %>
+    <% if @all.size == 1 %>
+      <a href="<a href="/supplies/<%= supply.id %>">
+      <%= supply.name.capitalize %></a>
+
+    <% elsif @all.size > 1 %>
+      <% @all.each do |supply| %>
+      <ul>
+        <li><a href="/supplies/<%= supply.id %>"><%= supply.name.capitalize %></a></li>
+      </ul>
+      <% end %>
+    <% end %>
+  <% end %>
+
+
+    <br>
+    <br>
+    <a href="/supplies/new"><input type="submit" value="Create New Supplies"></a>
+    <br>
+    <br>
+    <br>
+    </body>
