--- a/app/views/supplies/edit.erb
+++ b/app/views/supplies/edit.erb
@@ -23,12 +23,12 @@
     <br>
 
     <h3><label for="price per unit">Price per unit:</label></h3>
-    <h4><%= @project.price_per_unit %></h4>
+    <h4><%= @supply.price_per_unit %></h4>
       <input type="number" min="0.00" max="10000.00" step="0.01" name="price_per_unit" id="price per unit" placeholder="update price">
     <br>
 
     <h3><label for="units needed">Units needed:</label></h3>
-    <h4><%= @project.units_needed %></h4>
+    <h4><%= @supply.units_needed %></h4>
     <input type="integer" name="units_needed" id="units needed" placeholder="update units needed">
     <br>
 
