--- a/app/views/supplies/show.erb
+++ b/app/views/supplies/show.erb
@@ -1,27 +1,21 @@
+<h1><%= @supply.name %></h1>
+<br>
+<b>
 
-
-<h1><%= @project.name %></h1>
-<h3>Type: </h3>
-<h4><%= @project.project_type %></h4>
-<br>
-<h3>Date: </h3>
-<h4><%= @project.date %></h4>
-<br>
-<h3>Attendees: </h3>
-<h4><%= @project.attendees %></h4>
-<br>
-<h3>Supplies Budget:  </h3>
-<h4><%= @project.date %></h4>
+<h3>Vendor: <%= @supply.vendor %></h3>
 <br>
 
-<a href="/projects/<%= @project.id %>/edit"><input type="submit" value="Edit"></a>
+<h3>Website: <%= @supply.website %></h3>
+<br>
 
+<h3>Unit type: <%= @supply.unit_type %></h3>
 <br>
+
+<h3>Price per unit: <%= @supply.price_per_unit %></h3>
 <br>
-<a href="/projects/<%= @project.id %>/delete"><input type="submit" value="Delete Project"></a>
-<br>
-<br>
-<a href="users/dashboard"><input type="submit" value="Back to my dashboard"></a>
+
+<h3>Units needed: <%= @supply.units_needed %></h3>
 
 
-<a href="/users/logout"><input type="submit" value="Log Out"></a>
+<a href="/supplies/<%= @supply.id %>/edit"><input type="submit" value="Edit this Supply"></a>
+    
